--- a/src/scss/_reviews.scss
+++ b/src/scss/_reviews.scss
@@ -9,6 +9,7 @@
 
   @media (max-width: $breakpoint768) {
     padding: 0 0 4rem;
+    margin-top: -2rem;
   }
 
   &__items {
